Fix: long domain names cause horizontal scroll with taghints

--- a/public/css/index-tailwind-output.css
+++ b/public/css/index-tailwind-output.css
@@ -896,10 +896,6 @@ video {
   margin-right: 4rem;
 }
 
-.mb-4 {
-  margin-bottom: 1rem;
-}
-
 .mt-4 {
   margin-top: 1rem;
 }
@@ -930,6 +926,10 @@ video {
 
 .mr-1 {
   margin-right: 0.25rem;
+}
+
+.mb-4 {
+  margin-bottom: 1rem;
 }
 
 .ml-1 {
@@ -1161,10 +1161,6 @@ video {
 
 .h-80 {
   height: 20rem;
-}
-
-.h-5\/6 {
-  height: 83.333333%;
 }
 
 .h-56 {
